@@ -52,6 +52,9 @@ Version 0.7.5 UNRELEASED
     It is safer (and not too onerous) to ask the user to fix the configuration
     file before continuing, rather than stomping on valid configuration values.
 
+  * Use new config_file.{h,cc} to improve config file management
+    (Closes: #504152, #502617, #442937, #407284)
+
 - User visible changes:
 
   * [cmdline] Minor improvements to help (Closes: #497136)
